5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4358/executions/1793_1599.log
== SUBMITION (2019-05-30 18:30:10) 
-- CODE:
from  math import*
itens=array(eval(input("custo dos itens:")))
total=sum(itens,dtype=float)
print(round(total,2))

-- EXECUTION TIME:
0.17301
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1599/main.py", line 2, in <module>
    itens=array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:30:14) 
-- CODE:
from  math import*
itens=array(eval(input("custo dos itens:")))
total=sum(itens,dtype=float)
print(round(total,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    itens=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:30:45) 
-- CODE:
from numpy import*
itens=array(eval(input("custo dos itens:")))
total=sum(itens,dtype=float)
print(round(total,2))

-- EXECUTION TIME:
0.444955
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
